components/flux-operator/configs/home/ingress-flux-operator.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-operator
  namespace: flux-system
  annotations:
    tailscale.com/proxy-group: private-ingress
    tailscale.com/tags: tag:k8s-private
    tailscale.com/http-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Flux"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "flux-cd.png"
    gethomepage.dev/href: "https://flux-operator.tail0c49c.ts.net"

spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - flux-operator
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flux-operator
                port:
                  name: http-web
